fix [#34303] Rotation fcurves don't work with transforming with individual centers