source/blender/editors/transform/transform.h
@@ -745,4 +745,8 @@ void projectEdgeSlideData(TransInfo *t, bool is_final);
 
 void freeVertSlideVerts(TransInfo *t);
 
+
+/* TODO. transform_queries.c */
+bool checkUseLocalCenter_GraphEdit(TransInfo *t);
+
 #endif
